Добавлена инструкция по ручной настройке нескольких сервисов в Railway
- Создан start.js для универсального запуска
- Добавлен RAILWAY_SETUP_GUIDE.md с пошаговой инструкцией
- Обновлен railway.toml с комментариями
- Обновлен package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Я ПОВАР - Telegram WebApp для наборов и продуктов для готовки",
   "main": "bot.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node start.js",
+    "start:server": "node server.js",
     "start:bot": "node bot-service.js",
     "start:all": "node bot.js",
     "dev": "nodemon server.js",
